--- a/OOP-Project/FundManager.xaml
+++ b/OOP-Project/FundManager.xaml
@@ -48,30 +48,30 @@
                         <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="352" Stroke="#FF00C4EA" VerticalAlignment="Top" Width="748"/>
                         <ComboBox x:Name="cmbAccountWithdraw" HorizontalAlignment="Left" Height="38" Margin="-730,70,0,0" VerticalAlignment="Top" Width="148" FontSize="24"/>
                         <Label Content="Selected Account" HorizontalAlignment="Left" Margin="-730,20,0,0" VerticalAlignment="Top" FontSize="20"/>
-                        <Label Content="Deposit Amount" HorizontalAlignment="Left" Margin="-730,120,0,0" VerticalAlignment="Top" FontSize="20"/>
-                        <TextBox x:Name="txtAmountWithdraw" Height="35" VerticalAlignment="Top" Width="149" HorizontalAlignment="Left" Margin="-730,150,0,0"/>
+                        <Label Content="Withdraw Amount" HorizontalAlignment="Left" Margin="-730,120,0,0" VerticalAlignment="Top" FontSize="20"/>
+                        <TextBox x:Name="txtWAmount" Height="35" VerticalAlignment="Top" Width="149" HorizontalAlignment="Left" Margin="-730,150,0,0"/>
                         <Label Content="Account Owner" HorizontalAlignment="Left" Margin="-500,20,0,0" VerticalAlignment="Top" FontSize="20"/>
-                        <TextBox x:Name="txtAccountNameWithdraw" Height="38" TextWrapping="Wrap" Text="..." VerticalAlignment="Top" Margin="-500,70,0,0" Width="146" HorizontalAlignment="Left" FontSize="24" Background="White" TextAlignment="Center" IsReadOnly="True"/>
+                        <TextBox x:Name="txtName" Height="38" TextWrapping="Wrap" Text="..." VerticalAlignment="Top" Margin="-500,70,0,0" Width="146" HorizontalAlignment="Left" FontSize="24" Background="White" TextAlignment="Center" IsReadOnly="True"/>
                         <Label Content="Current Balance" HorizontalAlignment="Left" Margin="-500,120,0,0" VerticalAlignment="Top" FontSize="20"/>
                         <TextBox x:Name="txtBalanceWithdraw" Height="35" TextWrapping="Wrap" Text="0.0" VerticalAlignment="Top" Margin="-500,150,0,0" Width="146" HorizontalAlignment="Left" FontSize="24" Background="White" TextAlignment="Center" IsReadOnly="True"/>
-                        <Button x:Name="btnWithdraw" Content="Withdraw Funds" Margin="-730,90,0,0" Width="130" Height="40" FontSize="18" Cursor="Hand" Background="#FF00C4EA" BorderBrush="Black" HorizontalAlignment="Left" />
+                        <Button x:Name="btnWithdraw" Content="Withdraw Funds" Margin="-730,90,0,0" Width="130" Height="40" FontSize="18" Cursor="Hand" Background="#FF00C4EA" BorderBrush="Black" HorizontalAlignment="Left" Click="btnWithdraw_Click" />
 
                     </DockPanel>
                 </Grid>
             </TabItem>
-            <TabItem x:Name="tabDeposit" Header="Deposit Funds">
+            <TabItem x:Name="tabDeposit" Header="Deposit Funds" Loaded="tabDeposit_Loaded">
                 <Grid Background="#FFE5E5E5">
                     <DockPanel Margin="10,10,9.8,10">
                         <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="352" Stroke="#FF00C4EA" VerticalAlignment="Top" Width="748"/>
-                        <ComboBox x:Name="cmbAccountDeposit" HorizontalAlignment="Left" Height="38" Margin="-730,70,0,0" VerticalAlignment="Top" Width="148" FontSize="24"/>
+                        <ComboBox x:Name="cboAccNo" HorizontalAlignment="Left" Height="38" Margin="-730,70,0,0" VerticalAlignment="Top" Width="148" FontSize="24" SelectionChanged="cboAccNo_SelectionChanged"/>
                         <Label Content="Selected Account" HorizontalAlignment="Left" Margin="-730,20,0,0" VerticalAlignment="Top" FontSize="20"/>
                         <Label Content="Deposit Amount" HorizontalAlignment="Left" Margin="-730,120,0,0" VerticalAlignment="Top" FontSize="20"/>
-                        <TextBox x:Name="txtAmountDeposit" Height="35" VerticalAlignment="Top" Width="149" HorizontalAlignment="Left" Margin="-730,150,0,0"/>
+                        <TextBox x:Name="txtDAmount" Height="35" VerticalAlignment="Top" Width="149" HorizontalAlignment="Left" Margin="-730,150,0,0"/>
                         <Label Content="Account Owner" HorizontalAlignment="Left" Margin="-500,20,0,0" VerticalAlignment="Top" FontSize="20"/>
-                        <TextBox x:Name="txtAccountNameDeposit" Height="38" TextWrapping="Wrap" Text="..." VerticalAlignment="Top" Margin="-500,70,0,0" Width="146" HorizontalAlignment="Left" FontSize="24" Background="White" TextAlignment="Center" IsReadOnly="True"/>
+                        <TextBox x:Name="txtAccname" Height="38" TextWrapping="Wrap" VerticalAlignment="Top" Margin="-500,70,0,0" Width="146" HorizontalAlignment="Left" FontSize="24" Background="White" TextAlignment="Center" IsReadOnly="True"/>
                         <Label Content="Current Balance" HorizontalAlignment="Left" Margin="-500,120,0,0" VerticalAlignment="Top" FontSize="20"/>
-                        <TextBox x:Name="txtBalanceDeposit" Height="35" TextWrapping="Wrap" Text="0.0" VerticalAlignment="Top" Margin="-500,150,0,0" Width="146" HorizontalAlignment="Left" FontSize="24" Background="White" TextAlignment="Center" IsReadOnly="True"/>
-                        <Button x:Name="btnDeposit" Content="Deposit Funds" Margin="-730,90,0,0" Width="130" Height="40" FontSize="18" Cursor="Hand" Background="#FF00C4EA" BorderBrush="Black" HorizontalAlignment="Left" />
+                        <TextBox x:Name="txtbal" Height="35" TextWrapping="Wrap" Text="0.0" VerticalAlignment="Top" Margin="-500,150,0,0" Width="146" HorizontalAlignment="Left" FontSize="24" Background="White" TextAlignment="Center" IsReadOnly="True"/>
+                        <Button x:Name="btnDeposit" Content="Deposit Funds" Margin="-730,90,0,0" Width="130" Height="40" FontSize="18" Cursor="Hand" Background="#FF00C4EA" BorderBrush="Black" HorizontalAlignment="Left" Click="btnDeposit_Click" />
 
                     </DockPanel>
                 </Grid>
